# AI-resume-analyzer

./: README.md  ats.db  pyproject.toml  requirements.txt  test_backend.py  validate_submission.py
.streamlit/: config.toml
backend/: __init__.py  document_parser.py  embeddings.py  main.py  parser.py  ranking.py  scoring.py  utils.py
backend/database/: __init__.py  db.py  models.py
backend/repositories/: analysis_repo.py  candidate_repo.py  company_repo.py  jd_repo.py  settings_repo.py  user_repo.py
backend/services/: analytics_service.py  auth_service.py  candidate_service.py  jd_service.py  report_service.py  upload_service.py
data/: resume.txt
frontend/: README.md  analytics.py  app.py  auth.py  candidate_profile.py  components.py  dashboard.py  demo_data.py  header.py  job_description.py  pipeline.py  ranking.py  reports.py  resume_analysis.py  settings.py  shortlisted.py  sidebar.py  styles.py  theme.py
scripts/: generate_test_data.py
tests/: test_analyzer_pipeline.py  test_phase1.py  test_phase3.py
