[project]
name = "ai-resume-analyzer"
version = "0.1.0"
description = "Hackathon: AI Resume Analyzer — Phase 1 Backend"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "WARNING"
